# gifndk

./: README.md  build.gradle
src/androidTest/java/com/inke/myndkgif/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
src/main/java/com/inke/myndkgif/: GifHelper.java  MainActivity.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml  themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/inke/myndkgif/: ExampleUnitTest.java
